--- a/logicle/package.json
+++ b/logicle/package.json
@@ -87,8 +87,8 @@
     "micromatch": "^4.0.5",
     "moment": "2.29.4",
     "nanoid": "^5.0.4",
-    "next": "^15.2.1",
-    "next-auth": "^5.0.0-beta.24",
+    "next": "^15.2.3",
+    "next-auth": "5.0.0-beta.25",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
     "openai": "^4.80.0",
@@ -148,7 +148,7 @@
     "eslint-plugin-i18next": "^6.1.1",
     "eslint-plugin-react": "^7.37.4",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "29.6.4",
+    "jest-environment-jsdom": "29.7.0",
     "kysely-codegen": "^0.11.0",
     "lint-staged": "14.0.1",
     "prettier": "3.0.3",
